--- a/src/views/pages/class/task-print.ejs
+++ b/src/views/pages/class/task-print.ejs
@@ -12,8 +12,8 @@
   <%- include("../../components/classroom-sidebar.ejs", { classId }) %>
   <main class="sm:ml-64 p-6 flex flex-col lg:flex-row h-screen">
     <section class="w-full lg:w-1/3 bg-background-50 rounded-lg shadow-md p-4 lg:overflow-y-auto h-auto lg:h-full lg:mr-6 mb-6 lg:mb-0">
-      <h1 id="task-name" class="text-2xl font-semibold mb-4">Task Name</h1>
-      <p id="task-description" class="text-gray-700 mb-4">This is a short description of the task that outlines the key objectives and details.</p>
+      <h1 id="task-name" class="text-2xl font-semibold mb-4"></h1>
+      <p id="task-description" class="text-gray-700 mb-4"></p>
 
       <hr class="border-t border-gray-300 mb-6" />
 
@@ -102,65 +102,6 @@
   <script>
     const classroom = new Classroom(app);
 
-    classroom.getClass("<%= classId %>").then((response) => {
-      if (response.status === "success") {
-        const students = response.data.students.filter((student) => !student.deleted);
-
-        document.title = `MPC Lab | Print Task - ${response.data.name}`;
-        document.getElementById("classroom-name").textContent = response.data.name;
-        const studentsCount = document.getElementById("students-count");
-        const adminsCount = document.getElementById("admins-count");
-        studentsCount.textContent = students.length;
-        adminsCount.textContent = response.data.admins.length;
-        studentsCount.classList.remove("hidden");
-        adminsCount.classList.remove("hidden");
-
-        const studentsList = document.getElementById("students");
-        students.forEach((student) => {
-          const studentElement = document.createElement("li");
-          studentElement.className = "p-2 bg-white hover:bg-gray-100 rounded-md border cursor-pointer";
-          studentElement.textContent = student.name;
-          studentElement.addEventListener("click", (event) => {
-            event.target.parentElement.querySelectorAll("li").forEach((element) => {
-              element.classList.remove("bg-primary-100");
-              element.classList.add("bg-white");
-              element.classList.add("hover:bg-gray-100");
-            });
-            event.target.classList.add("bg-primary-100");
-            event.target.classList.remove("bg-white");
-            event.target.classList.remove("hover:bg-gray-100");
-            document.getElementById("current-student-name").textContent = `Print (${student.name})`;
-            viewStudentTask(student);
-          });
-          studentsList.appendChild(studentElement);
-        });
-
-        const printAllButton = document.getElementById("print-all");
-        printAllButton.addEventListener("click", () => {
-          printAllButton.disabled = true;
-          printAllButton.textContent = "Getting tasks...";
-          const tasksPromises = students.map((student) => getCachedTaskProblems("<%= taskId %>", student.studentNumber));
-          Promise.all(tasksPromises).then((responses) => {
-            printAllButton.textContent = "Generating PDF...";
-            const tasks = responses.map((response, index) => ({
-              problems: response.data,
-              studentId: students[index].studentNumber,
-              studentName: students[index].name,
-            }));
-            const printOptions = getPrintOptions();
-            problemsPrinter.render(tasks, printOptions);
-            setTimeout(() => {
-              problemsPrinter.print();
-              printAllButton.disabled = false;
-              printAllButton.textContent = "Print All";
-            }, tasks.length * tasks.reduce((acc, task) => acc + task.problems.length, 0) * 20);
-          });
-        });
-      } else {
-        handleClassError(response);
-      }
-    });
-
     classroom.getTask("<%= taskId %>").then((response) => {
       if (response.status === "success") {
         document.getElementById("task-name").textContent = response.data.name;
@@ -168,6 +109,71 @@
 
         document.getElementById("display-task-name").value = response.data.name;
         document.getElementById("display-task-description").value = response.data.description;
+
+        const userTasks = response.data.userTasks;
+
+        classroom.getClass("<%= classId %>").then((response) => {
+          if (response.status === "success") {
+            const classStudents = response.data.students;
+            const taskStudents = userTasks.map((userTask) => classStudents.find((student) => student.studentNumber === userTask.studentNumber));
+
+            const students = response.data.students.filter((student) => !student.deleted);
+
+            document.title = `MPC Lab | Print Task - ${response.data.name}`;
+            document.getElementById("classroom-name").textContent = response.data.name;
+            const studentsCount = document.getElementById("students-count");
+            const adminsCount = document.getElementById("admins-count");
+            studentsCount.textContent = students.length;
+            adminsCount.textContent = response.data.admins.length;
+            studentsCount.classList.remove("hidden");
+            adminsCount.classList.remove("hidden");
+
+            const studentsList = document.getElementById("students");
+            taskStudents.forEach((student) => {
+              const studentElement = document.createElement("li");
+              studentElement.className = "p-2 bg-white hover:bg-gray-100 rounded-md border cursor-pointer";
+              studentElement.textContent = student.name;
+              studentElement.addEventListener("click", (event) => {
+                event.target.parentElement.querySelectorAll("li").forEach((element) => {
+                  element.classList.remove("bg-primary-100");
+                  element.classList.add("bg-white");
+                  element.classList.add("hover:bg-gray-100");
+                });
+                event.target.classList.add("bg-primary-100");
+                event.target.classList.remove("bg-white");
+                event.target.classList.remove("hover:bg-gray-100");
+                document.getElementById("current-student-name").textContent = `Print (${student.name})`;
+                viewStudentTask(student);
+              });
+              studentsList.appendChild(studentElement);
+            });
+
+            const printAllButton = document.getElementById("print-all");
+            printAllButton.addEventListener("click", () => {
+              printAllButton.disabled = true;
+              printAllButton.textContent = "Getting tasks...";
+              const tasksPromises = taskStudents.map((student) => getCachedTaskProblems("<%= taskId %>", student.studentNumber));
+              Promise.all(tasksPromises).then((responses) => {
+                printAllButton.textContent = "Generating PDF...";
+                const tasks = responses.map((response, index) => ({
+                  problems: response.data,
+                  studentId: taskStudents[index].studentNumber,
+                  studentName: taskStudents[index].name,
+                }));
+                const printOptions = getPrintOptions();
+                problemsPrinter.render(tasks, printOptions);
+                setTimeout(() => {
+                  problemsPrinter.print();
+                  printAllButton.disabled = false;
+                  printAllButton.textContent = "Print All";
+                }, tasks.length * tasks.reduce((acc, task) => acc + task.problems.length, 0) * 20);
+              });
+            });
+          } else {
+            handleClassError(response);
+          }
+        });
+
       } else {
         handleTaskError(response);
       }
