--- a/src/views/pages/class/task-grade.ejs
+++ b/src/views/pages/class/task-grade.ejs
@@ -8,7 +8,7 @@
   <title>MPC Lab | Grade Task</title>
 </head>
 
-<body>
+<body class="lg:overflow-y-hidden">
   <%- include("../../components/classroom-sidebar.ejs", { classId }) %>
   <main class="sm:ml-64 p-6 flex flex-col lg:flex-row h-screen">
     <section class="w-full lg:w-1/3 bg-background-50 rounded-lg shadow-md p-4 lg:overflow-y-auto h-auto lg:h-full lg:mr-6 mb-6 lg:mb-0">
