--- a/src/views/pages/class/task-print.ejs
+++ b/src/views/pages/class/task-print.ejs
@@ -153,7 +153,7 @@
               printAllButton.disabled = true;
               printAllButton.textContent = "Getting tasks...";
               const tasksPromises = taskStudents.map((student) => getCachedTaskProblems("<%= taskId %>", student.studentNumber));
-              Promise.all(tasksPromises).then((responses) => {
+              Promise.all(tasksPromises).then(async (responses) => {
                 printAllButton.textContent = "Generating PDF...";
                 const tasks = responses.map((response, index) => ({
                   problems: response.data,
@@ -161,12 +161,10 @@
                   studentName: taskStudents[index].name,
                 }));
                 const printOptions = getPrintOptions();
-                problemsPrinter.render(tasks, printOptions);
-                setTimeout(() => {
-                  problemsPrinter.print();
-                  printAllButton.disabled = false;
-                  printAllButton.textContent = "Print All";
-                }, tasks.length * tasks.reduce((acc, task) => acc + task.problems.length, 0) * 20);
+                await problemsPrinter.render(tasks, printOptions);
+                problemsPrinter.print();
+                printAllButton.disabled = false;
+                printAllButton.textContent = "Print All";
               });
             });
           } else {
@@ -198,9 +196,11 @@
     }
 
     const printButton = document.getElementById("print");
-    printButton.addEventListener("click", () => {
+    printButton.addEventListener("click", async () => {
       if (currentProblems) {
-        problemsPrinter.render([{
+        printButton.disabled = true;
+        printButton.textContent = "Generating PDF...";
+        await problemsPrinter.render([{
           problems: currentProblems,
           studentId: currentStudent.studentNumber,
           studentName: currentStudent.name,
@@ -208,21 +208,18 @@
           ...getPrintOptions(),
           withAnswers: false,
         });
-
-        printButton.disabled = true;
-        printButton.textContent = "Generating PDF...";
-        setTimeout(() => {
-          problemsPrinter.print();
-          printButton.disabled = false;
-          printButton.textContent = "Print";
-        }, problems.length * 20);
+        problemsPrinter.print();
+        printButton.disabled = false;
+        printButton.textContent = "Print";
       }
     });
 
     const printSolutionButton = document.getElementById("print-solution");
-    printSolutionButton.addEventListener("click", () => {
+    printSolutionButton.addEventListener("click", async () => {
       if (currentProblems) {
-        problemsPrinter.render([{
+        printSolutionButton.disabled = true;
+        printSolutionButton.textContent = "Generating PDF...";
+        await problemsPrinter.render([{
           problems: currentProblems,
           studentId: currentStudent.studentNumber,
           studentName: currentStudent.name,
@@ -230,14 +227,9 @@
           ...getPrintOptions(),
           withAnswers: true,
         });
-
-        printSolutionButton.disabled = true;
-        printSolutionButton.textContent = "Generating PDF...";
-        setTimeout(() => {
-          problemsPrinter.print();
-          printSolutionButton.disabled = false;
-          printSolutionButton.textContent = "Print (Problem + Solution and Steps)";
-        }, problems.length * 60);
+        problemsPrinter.print();
+        printSolutionButton.disabled = false;
+        printSolutionButton.textContent = "Print (Problem + Solution and Steps)";
       }
     });
 
